include soc med icons

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,6 +7,11 @@
         </a>
       </h1>
       <p class="lead">{{ site.description }}</p>
+      
+      <div id="social-icons">
+        <a class="sidebar-nav-item" href="{{ site.github.url }}"><i class="fa fa-github" aria-hidden="true"></i></a>
+        <a class="sidebar-nav-item" href="{{ site.twitter.url }}"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+      </div>
     </div>
 
     <nav class="sidebar-nav">
