--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,10 +8,6 @@
       </h1>
       <p class="lead">{{ site.description }}</p>
       
-      <div id="social-icons">
-        <a class="sidebar-nav-item" href="{{ site.github.url }}"><i class="fa fa-github" aria-hidden="true"></i></a>
-        <a class="sidebar-nav-item" href="{{ site.twitter.url }}"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-      </div>
     </div>
 
     <nav class="sidebar-nav">
@@ -33,7 +29,10 @@
 
       <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+     <div id="social-icons" style="display: flex;">
+        <a class="sidebar-nav-item" href="{{ site.github.url }}"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+        <a class="sidebar-nav-item" href="{{ site.twitter.url }}"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+      </div
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
